--- a/src/main/webapp/root/user/user_add.html
+++ b/src/main/webapp/root/user/user_add.html
@@ -92,6 +92,13 @@
                                     </div>
                                 </div>
 
+                                <div class="form-group" id="emailDiv">
+                                    <label for="email" class="col-sm-2 control-label">电子邮件</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="email" placeholder="电子邮件" name="email">
+                                    </div>
+                                </div>
+
 
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">性别</label>
