--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -39,14 +39,12 @@
 
 			<form action="" method="post" id="loginForm">
 				<div class="form-group has-feedback">
-					<input type="text" class="form-control" placeholder="用户名"
-						name="username"> <span
-						class="glyphicon glyphicon-envelope form-control-feedback"></span>
+					<input type="text" class="form-control" placeholder="用户名" name="username" id="username">
+					<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
 				</div>
 				<div class="form-group has-feedback">
-					<input type="password" class="form-control" placeholder="密码"
-						name="password"> <span
-						class="glyphicon glyphicon-lock form-control-feedback"></span>
+					<input type="password" class="form-control" placeholder="密码" name="password">
+					<span class="glyphicon glyphicon-lock form-control-feedback"></span>
 				</div>
 				<div class="row">
 					<div class="col-xs-8">
@@ -106,14 +104,17 @@
 				success : function(data) {
 					if (data.code == 0)
 						alert(data.message);
-					if (data.code == 1)
+					if (data.code == 1){
+						   //alert(id);
 						document.location = path + data.message;
+					}
 				},
 				error :function(data){
 					alert("error");
 				}
 			});
 		}
+
 	</script>
 </body>
 </html>
