--- a/src/main/webapp/utils/header.html
+++ b/src/main/webapp/utils/header.html
@@ -13,37 +13,10 @@
 	<div class="navbar-custom-menu">
 		<ul class="nav navbar-nav">
 			<!-- User Account: style can be found in dropdown.less -->
-			<li class="dropdown user user-menu"><a href="#"
-				class="dropdown-toggle" data-toggle="dropdown"> <img src=""
-					class="user-image" alt="User Image" id="userImg"> <span
-					class="hidden-xs">Alexander Pierce</span>
+			<li class="dropdown user user-menu"><a id="logout" href="">
+					<img src="" class="user-image" alt="User Image" id="userImg">
+					退出登录<span class="hidden-xs"> </span>
 			</a>
-				<ul class="dropdown-menu">
-					<!-- Menu Body -->
-					<li class="user-body">
-						<div class="row">
-							<div class="col-xs-4 text-center">
-								<a href="#">Followers</a>
-							</div>
-							<div class="col-xs-4 text-center">
-								<a href="#">Sales</a>
-							</div>
-							<div class="col-xs-4 text-center">
-								<a href="#">Friends</a>
-							</div>
-						</div> <!-- /.row -->
-					</li>
-					<!-- Menu Footer-->
-					<li class="user-footer">
-						<div class="pull-left">
-							<a href="#" class="btn btn-default btn-flat">Profile</a>
-						</div>
-						<div class="pull-right">
-							<a class="btn btn-default btn-flat" id="logout">Sign out</a>
-						</div>
-					</li>
-				</ul></li>
-			<!-- Control Sidebar Toggle Button -->
 		</ul>
 	</div>
 </nav>
